# usb-disk-remover

./: .gitignore  Cargo.toml  README.md  app.manifest  app.rc  build.rs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: About.tsx  App.tsx  drives.rs  eject.rs  main.rs  main.tsx  styles.css  ui.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: drives.rs  lib.rs  main.rs  utils.rs
