[package]
name = "usb-disk-remover"
version = "0.1.0"
edition = "2024"

[dependencies]
# Win32 API bindings for Rust
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

# Native Win32 GUI wrappers
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[build-dependencies]
embed-resource = "3"

[[bin]]
name = "usb-disk-remover"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
